--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet/less" type="text/css" href="style/styles.less">
 	<script type="text/javascript" src="js/less-1.1.3.min.js"></script>
 </head>
-<body>
-		<div id="login">
+<body id="login">
+		<div>
 		    <header>
 			    <div id="headline">
 				     jsMyAdmin
